update character bios and workflow

--- a/characters.html
+++ b/characters.html
@@ -22,34 +22,65 @@
             <div class="character">
                 <h2>Wake Dust</h2>
                 <h4>“The Cowboy”</h4>
+                <p>The one responsible for the STAR incident as well as the single most hated man in the Hunter community. 
+                    Initially sentenced to death for the murder of Frank Fredericks, Wake accepted a plea deal for life 
+                    imprisonment without parole in exchange for the identities of 11 high threat-level Hunters, the majority 
+                    of which were swiftly apprehended soon afterwards. This act led to the loss of millions in sponsorships 
+                    and the collapse of the GATT industry, effectively ending the Golden Age of Hunting and drawing criticism 
+                    from all sides. Unable to cope with the massive backlash and hostile prison environment, Wake was found 
+                    lying in a pool of blood, having taken his own life only months into his sentence. He went down in history 
+                     a coward and a traitor.
+                    <br><br>
+                    …or at least, that's what the public was told. In reality, Wake never saw the inside of a jail cell. 
+                    Instead, those 11 names landed him a second chance in the form of a new identity and three years of 
+                    witness protection. They sent him to where all things go when Beacon wants them forgotten, Crimson County, 
+                    otherwise known as The Lion’s Junkyard. There, he became a construction worker and a day drinker, losing 
+                    track of the days as the galaxy slowly moved on from the memory of The Cowboy. But now that three years 
+                    have passed and the STAR case has been reopened, it seems as if Wake’s time in the shade has just about 
+                    run out. And some people haven’t forgotten.
+                    </p>
             </div>
 
             <div class="character">
                 <h2>Violet Beck</h2>
                 <p>
-                    A young felon seeking The Cowboy after getting caught in the legal whirlwind of the STAR murder case. 
-                    Cool, lazy, and cunning to a fault, she speaks with dry wit and a calm tenacity. Armed with her trusty 
-                    modified boxcutter, she never fails to make a proud display of her strong (albeit rusty) hand-to-hand 
-                    combat skills gained from time spent serving in Beacon’s military. At birth, she was diagnosed with 
-                    Sanguineous Terminus, a bone marrow mutation that causes the overproduction of red blood cells, often 
-                    leading to death by internal drowning in patients. Fortunately, she was among the very few whose body 
-                    was compatible with experimental treatment at the time and she lived. Through guided practice, she 
-                    learned to manipulate her blood as a lethal weapon, as well as a means to speed up her body’s 
-                    natural recovery process with a set of techniques now known as Blood Style.
+                    A young felon seeking The Cowboy after getting caught in the legal whirlwind of the reopened STAR case. 
+                    Coolheaded and intelligent (though lazy), she speaks with dry wit and a calm tenacity. Armed with her 
+                    trusty modified boxcutter, she never fails to make a proud display of her strong (albeit rusty) 
+                    hand-to-hand combat skills gained from time spent serving in Beacon military. At birth, she was diagnosed 
+                    with Sanguineous Terminus, a bone marrow mutation that causes the overproduction of red blood cells, often 
+                    leading to death by internal drowning in patients. Fortunately, she was among the very few whose body was 
+                    compatible with experimental treatment at the time and she lived. Through guided practice, she learned to 
+                    manipulate her blood as a lethal weapon, as well as a means to speed up her body’s natural recovery process 
+                    with a set of techniques now known as Blood Style.
                 </p>
             </div>
 
             <div class="character">
                 <h2>General Stanwix</h2>
                 <p>
-                    A man of the law hellbent on seeing The Cowboy face judgement for his crimes, dead or alive.
+                    A man of the law hellbent on seeing The Cowboy face judgement for his crimes, dead or alive. A former Hunter 
+                    himself, he began his military career after turning himself in for arrest following a failed assassination 
+                    attempt on the young prince of the sovereign planet, Barikai. Knowing that the boy’s status and age would 
+                    constitute a heavier sentence, he offered his services to Beacon. After having his Hunting history revealed 
+                    by Wake during the STAR trial, Stanwix lost the title of General he had worked so hard to achieve to John 
+                    Adams Bayer and was sent to Crimson County to serve the impoverished in an attempt to rehabilitate his image. 
+                    That was the intent, at least. Instead, Stanwix threw himself into work, obsessively compiling evidence 
+                    towards a case against Wake in an attempt to close this case once and for all.
                 </p>
             </div>
 
             <div class="character">
                 <h2>Kavka</h2>
                 <p>
-                    An orphan on the run from her abusive caretakers.
+                    The orphan that steals Wake's wallet. A cunning and precocious young girl, her shrill voice and excitable nature 
+                    is seldom seen in her effort to appear tougher, leaking out only when fangirling over old-timey Golden Age Hunters. 
+                    As the child of a human father and Kali mother, she was born with several mutations (tridactylous limbs and 
+                    discolored splotches all over her body, as well as a disfigured left horn) that made her an unpopular adoption 
+                    candidate at the orphanage. Feeling pity for her (and seeing an opportunity to save money on hiring a janitor), 
+                    Emile decided to take her in, letting her stay in the saloon cellar. Holding out hope that her father is alive 
+                    somewhere, she can be found in the Bainbrook City marketplace, pickpocketing the poor in the hopes that she may 
+                    one day save up enough to purchase a one-way trip out of Crimson County.
                 </p>
             </div>
 
@@ -70,14 +101,27 @@
             <div class="character">
                 <h2>Emile Caballero</h2>
                 <p>
-                    The owner of Emile’s Saloon & Grill.
+                    The owner of Emile’s Saloon & Grill and Violet's ex-boyfriend. Cousin of notorious drug lord going by the name 
+                    of "El Reyayo", Emile is responsible for distribution in Crimson County, keeping competition at bay with his gang, 
+                    La Bestia. An avid gambler, compulsive liar, and habitual cheater, Emile views his saloon as a place to launder 
+                    money and host drug deals and while this is a well known fact (even to local authorities), he remains untouchable. 
+                    This is because he issues loans, having his men serve as his sharks. Operating as a sort of bank in such an 
+                    impoverished environment has positioned him as an invaluable resource to the residents of the County, allowing 
+                    him to fly under the radar.
                 </p>
             </div>
 
             <div class="character">
                 <h2>Flint & Falke Fredericks</h2>
                 <p>
-                    The twin nephew-in-laws of Frank Fredericks.
+                    The twin nephew-in-laws of Frank Fredericks. Given the fact that their uncle (their only known living relative) 
+                    is an intergalactic Pirate on the run, they were placed under the legal guardianship of Frank upon his arrest 
+                    three years before his murder. As per the instructions in his will, they were enrolled in military school. 
+                    Since he didn’t specify as to where, however, Beacon officials took the liberty of dumping them in Crimson County, 
+                    as their very existence qualified as bad publicity. There, the twins began attending Bainbrook Preparatory School 
+                    where they both strived for high marks, but for opposite reasons. While Falke wants nothing to do with Beacon 
+                    (instead studying to get into law school), Flint aims to be placed in a top-tier infantry Division, as while 
+                    they seldom participate during wartime, soldiers in them still earn enough to support a cushy lifestyle.
                 </p>
             </div>
 
@@ -85,7 +129,14 @@
                 <h2>Frank Fredericks</h2>
                 <h4>"The Fellow"</h4>
                 <p>
-                    The murder victim in the STAR case.
+                    The victim in the STAR case. As the infamous kingpin running the largest network distributing primarily spacedust, 
+                    Frank was arrested for various racketeering and drug charges five years before STAR took place. On the night of the 
+                    crime, he was being held on the luxurious 50th floor of Booker Ace Penitentiary (receiving special treatment due to 
+                    his wealth and connections) when The Cowboy broke into his "cell", setting Frank aflame after a brief conflict. 
+                    Thanks to experimental treatment, he had become one of the first users whose body was able to develop and maintain 
+                    a second Style alongside his first, but since neither were equipped to withstand prolonged exposure to high 
+                    temperature, Frank was killed. Though he doesn't appear to possess any known relatives, he is survived by his 
+                    fiancé, J'Wakka, and twin nephew-in-laws, Flint and Falke.
                 </p>
             </div>
 
