--- a/episodes.html
+++ b/episodes.html
@@ -21,6 +21,7 @@
         <div class="episodes">
             <div class="episode">
                 <h2>Episode 1 - S.T.A.R.</h2>
+                <h4>01/01/2021</h4>
                 <iframe 
                     width="100%" height="75%" src="https://www.youtube.com/embed/0ESmRDQzvxA" 
                     frameborder="0" 
@@ -36,8 +37,16 @@
             <div class="episode">
                 <h2>Episode 2 - WOUND</h2>
                 <h4>Coming Soon!</h4>
-                <p>Violet tracks down more witnesses from the STAR case. Wake discovers a mysterious ally. </p>
-                
+                <iframe 
+                    width="100%" height="75%" src="https://www.youtube.com/embed/UUz2ogeB-Tw" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+                <p>
+                    Violet tracks down more witnesses from the STAR case. Wake discovers a mysterious ally. 
+                    Watch a clip from the upcoming episode!
+                </p>
             </div>
 
             <div class="episode">
