--- a/index.html
+++ b/index.html
@@ -29,6 +29,55 @@
             <p>GATT is an original 3D animated science fiction series written by Alfonso Vaca and created by Rigved Deshpande.</p>
             <p>GATT is being performed virtually during the pandemic and animated using the Unity game engine. Real time 3D animation is a blazing-fast, exciting new way to create content, and enables a tiny team like ours to tell a huge story. Our voice actors come from all skill levels and together we have been able to pull together an engaging performance while working remotely. GATT is in active development, and there is room for everyone to contribute their talents, try out something new and be a part of this story!</p>    
         </div>
+
+        <div class="featured-content">
+            <iframe 
+                width="100%" height="90%" src="https://www.youtube.com/embed/UUz2ogeB-Tw" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="workflow">
+            <div class="workflow-step">
+                <h2>Script</h2>
+                <p>
+                    Work on GATT always begins with the screenplay. Once our writer has finished working on the script it is
+                    distributed to all of our voice actors.
+                </p>
+                <img src="Assets/Workflow/script.png" alt="Pages of GATT screenplay" width="100%"/>
+            </div>
+
+            <div class="workflow-step">
+                <h2>Storyboard</h2>
+                <p>
+                    Instead of a conventional storyboard, we use simple colored boxes and virtual cameras to both layout and 
+                    storyboard our scenes at the same time. This form of 3d storyboard helps identify what is and isn't working on 
+                    screen and serves as a good foundation for the animation process.
+                </p>
+                <img src="Assets/Workflow/storyboard.gif" alt="Animatic using colored boxes" width="100%"/>
+            </div>
+
+            <div class="workflow-step">
+                <h2>Modelling</h2>
+                <p>
+                    After the character concept art has been created, we use a freely available character creation software such as 
+                    Adobe Fuse to produce a basic human template model. This template is then taken into Blender for a substantial 
+                    amount of sculpting and hand-painted texturing to transform it into a character that resembles our initial concept. 
+                </p>
+                <img src="Assets/Workflow/modelling.png" alt="Character sculpting process from art to 3d" width="100%"/>
+            </div>
+
+            <div class="workflow-step">
+                <h2>Motion Capture</h2>
+                <p>
+                    Motion capture is a huge component of our animation process. Featured here is Rigved lip syncing Wake's lines with 46 blue tracker dots painted on his face. These trackers help bring Rigved's performance into Blender and then can be retargeted onto any character's face.
+                </p>
+                <img src="Assets/Workflow/capture.gif" alt="Character sculpting process from art to 3d" width="100%"/>
+            </div>
+        </div>
+
        
     </body>
 </html>
