--- a/episodes.html
+++ b/episodes.html
@@ -6,17 +6,49 @@
     </head>
 
     <body>
-        <div class="hero-image">
-        </div>
+        <script src="index.js"></script>
+        <!-- bootstrap browser globals -->
+        <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+        <script
+          src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+          crossorigin></script>
+        <script
+          src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+          crossorigin></script>
 
-        <nav>
-            <div class="nav-bar">
-                <div class="nav-box"><a href="./index.html">About</a></div>
-                <div class="nav-box selected"><a href="./episodes.html">Episodes</a></div>
-                <div class="nav-box"><a href="./characters.html">Characters</a></div>
-                <div class="nav-box"><a href="./synopsis.html">Synopsis</a></div>
+        <link
+            rel="stylesheet"
+            href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+        />
+        <link rel="stylesheet" type="text/css" href="custom.css">
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">GATT</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+          
+              <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="episodes.html">Episodes
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="characters.html">Characters</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="synopsis.html">Synopsis</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
 
         <div class="episodes">
             <div class="episode">
