--- a/characters.html
+++ b/characters.html
@@ -17,7 +17,7 @@
 
         <link
             rel="stylesheet"
-            href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/slate/bootstrap.min.css"
         />
         <link rel="stylesheet" type="text/css" href="custom.css">
 
