--- a/synopsis.html
+++ b/synopsis.html
@@ -13,7 +13,7 @@
           src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
           crossorigin></script>
         <script
-          src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+          src="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/slate/bootstrap.min.css"
           crossorigin></script>
 
         <link
