--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         />
         <link rel="stylesheet" type="text/css" href="custom.css">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">GATT</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,20 +30,10 @@
           
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="index/html">Home
-                      <span class="visually-hidden">(current)</span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="episodes.html">Episodes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="characters.html">Characters</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="synopsis.html">Synopsis</a>
-                  </li>
+                  <li class="nav-item"><a class="nav-link active" href="index.html">Home <span class="visually-hidden">(current)</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="episodes.html">Episodes</a></li>
+                  <li class="nav-item"><a class="nav-link" href="characters.html">Characters</a></li>
+                  <li class="nav-item"><a class="nav-link" href="synopsis.html">Synopsis</a></li>
                 </ul>
               </div>
             </div>
