--- a/synopsis.html
+++ b/synopsis.html
@@ -22,7 +22,7 @@
         />
         <link rel="stylesheet" type="text/css" href="custom.css">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">GATT</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
