--- a/characters.html
+++ b/characters.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Characters - R1G Studios</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -21,7 +22,7 @@
         />
         <link rel="stylesheet" type="text/css" href="custom.css">
 
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <nav class="navbar navbar-expand navbar-dark bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">GATT</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
