--- a/synopsis.html
+++ b/synopsis.html
@@ -25,7 +25,9 @@
 
         <nav class="navbar navbar-expand navbar-dark bg-primary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">GATT</a>
+              <a class="navbar-brand" href="#">
+                <img src="Assets/GATT_Logo.png" alt="gatt logo">
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
