add badges and credits

--- a/characters.html
+++ b/characters.html
@@ -58,7 +58,7 @@
                 <div class="card bg-primary text-white">
                     <img class="card-img" onclick="RevealBio('wake')" src="Assets/Bios/wake.png" alt="Card image">
                     <div class="card-img-overlay" onclick="HideBio('wake')" id="wake">
-                      <h5 class="card-title">Wake Dust</h5>
+                      <h5 class="card-title">Wake Dust <span class="badge bg-secondary">The Cowboy</span></h5>
                       <p class="card-text">
                         The one responsible for the STAR incident as well as the single most hated man in the Hunter community. 
                         Initially sentenced to death for the murder of Frank Fredericks, Wake accepted a plea deal for life 
@@ -76,6 +76,7 @@
                         track of the days as the galaxy slowly moved on from the memory of The Cowboy. But now that three years 
                         have passed and the STAR case has been reopened, it seems as if Wake’s time in the shade has just about 
                         run out. And some people haven’t forgotten.
+                        <footer class="blockquote-footer">voiced by Huw Messie</footer>
                     </p>
                     </div>
                   </div>
@@ -96,6 +97,7 @@
                         compatible with experimental treatment at the time and she lived. Through guided practice, she learned to 
                         manipulate her blood as a lethal weapon, as well as a means to speed up her body’s natural recovery process 
                         with a set of techniques now known as Blood Style.
+                        <footer class="blockquote-footer">voiced by Rebecca Polanske</footer>
                     </p>
                     </div>
                 </div>
@@ -115,6 +117,7 @@
                         Bayer and was sent to Crimson County to serve the impoverished in an attempt to rehabilitate his image. That was 
                         the intent, at least. Instead, Stanwix threw himself into work, obsessively compiling evidence towards a case 
                         against Wake in an attempt to close this case once and for all.
+                        <footer class="blockquote-footer">voiced by Alfonso Vaca</footer>
                     </p>
                     </div>
                 </div>
@@ -153,6 +156,7 @@
                         (i.e. expensive) fetishes and severe lack of self-control, he quickly found himself in an ocean of debt, 
                         forcing him to accommodate Crimson County’s more... unsavory potential tenants. That’s how he came 
                         to know his one and only friend, Violet.
+                        <footer class="blockquote-footer">voiced by Bob Bingham</footer>
                     </p>
                     </div>
                 </div>
@@ -199,7 +203,7 @@
                 <div class="card bg-primary text-white">
                     <img class="card-img" onclick="RevealBio('frank')" src="Assets/Bios/frank.png" alt="Card image">
                     <div class="card-img-overlay" onclick="HideBio('frank')" id="frank">
-                      <h5 class="card-title">Frank Fredericks</h5>
+                      <h5 class="card-title">Frank Fredericks <span class="badge bg-secondary">The Chameleon</span></h5>
                       <p class="card-text">
                         The victim in the STAR case. As the infamous kingpin running the largest network distributing primarily spacedust, 
                         Frank was arrested for various racketeering and drug charges five years before STAR took place. On the night of the 
@@ -228,6 +232,7 @@
                         General, Machias Stanwix. Under his rule, she begrudgingly carried out routine tasks in hopes that 
                         her efforts would eventually be rewarded with recognition and advancement, only to realize that 
                         he had no intention of sharing the limelight.
+                        <footer class="blockquote-footer">voiced by Madeline Saldana</footer>
                     </p>
                     </div>
                 </div>
@@ -247,6 +252,7 @@
                         they do have some skill as a mechanic, their body shop is nothing more than a neat, presentable front. 
                         Just a means to launder their profits, leaving customers like Gustaf to be viewed by Bulbino as mere 
                         tools, serving only to stave away suspicion during routine Beacon inspections.
+                        <footer class="blockquote-footer">voiced by Daniel De Angulo</footer>
                     </p>
                     </div>
                 </div>
@@ -256,7 +262,7 @@
                 <div class="card bg-primary text-white">
                     <img class="card-img" onclick="RevealBio('victorio')" src="Assets/Bios/victorio.png" alt="Card image">
                     <div class="card-img-overlay" onclick="HideBio('victorio')" id="victorio">
-                      <h5 class="card-title">Admiral Torrodin</h5>
+                      <h5 class="card-title">Admiral Torrodin <span class="badge bg-secondary">Victorio</span></h5>
                       <p class="card-text">
                         One of three Admirals in Beacon’s military hierarchy. A peaceful powerhouse of a man, he speaks with a 
                         calm intellect and an air of effortless authority. As a natural-born leader of men, Victorio seeks the 
@@ -275,7 +281,7 @@
                 <div class="card bg-primary text-white">
                     <img class="card-img" onclick="RevealBio('king')" src="Assets/Bios/king.png" alt="Card image">
                     <div class="card-img-overlay" onclick="HideBio('king')" id="king">
-                      <h5 class="card-title">?#@*&%</h5>
+                      <h5 class="card-title">?#@*&% <span class="badge bg-secondary">King</span></h5>
                       <p class="card-text">
                         An enigmatic figure. The self-proclaimed “King of the Hunters,” he can cause severe bodily harm seemingly 
                         at the flick of a finger. Though he’s shown a clear lack of regard for human life, his sadistic tendencies 
